--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "multer": "^1.4.2",
     "pg": "^8.4.2"
   },
   "devDependencies": {
