--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
