--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "formidable": "^1.2.2",
     "multer": "^1.4.2",
     "pg": "^8.4.2"
   },
